# simple-test

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Settings.cmake  Utilities.cmake
src/: CMakeLists.txt
src/math/: math.cpp  math.hpp
src/simpletest/: CMakeLists.txt  simpletest.hpp  simpletest_console_reporter.cpp  simpletest_console_reporter.hpp  simpletest_main.cpp  simpletest_reporter.hpp  simpletest_test_case.cpp  simpletest_test_case.hpp  simpletest_test_macros.cpp  simpletest_test_macros.hpp  simpletest_test_runner.cpp  simpletest_test_runner.hpp  simpletest_test_suite.cpp  simpletest_test_suite.hpp  simpletest_unit_test.cpp  simpletest_unit_test.hpp  simpletest_utils.hpp
test/: CMakeLists.txt  fixture.cpp  floating_point.cpp  main.cpp  math.cpp  string.cpp
